.k8s/base.yml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: v1
kind: Namespace
metadata:
  name: nocturnal-chorus-player
