.k8s/ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nocturnal-chorus-player
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: player-openapi-consumer-ingress
  namespace: nocturnal-chorus-player
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-logging: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: player-openapi-consumer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: player-openapi-consumer-service
            port:
              number: 4376
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: nocturnal-chorus-player
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-logging: "true"
    # nginx.ingress.kubernetes.io/server-snippet:
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   rewrite ^/minio/ui/(.*) /$1 break;
spec:
  ingressClassName: nginx
  rules:
  - host: minio.nocturnal-chorus.com
    http:
      paths:
      - path: /console(/|$)(.*)
        pathType: Exact
        backend:
          service:
            name: minio-service
            port:
              number: 9090
      - path: /()(.*)
        pathType: Exact
        backend:
          service:
            name: minio-service
            port:
              number: 9000
